# poker-analyzer

./: CLAUDE.md  README.md
.claude/agents/: 1-product-owner.md  2-senior-lead.md  3a-backend-developer.md  3b-frontend-developer.md  3c-database-architect.md  3d-poker-domain-expert.md  4-refactoring-agent.md  5-security-agent.md  6-test-writer.md  7-qa-agent.md  8-documentation-agent.md  9-pr-writer.md
backend/: pyproject.toml
backend/src/: __init__.py  database.py  main.py
backend/src/ai/: __init__.py  assistant.py
backend/src/analytics/: __init__.py  stats.py
backend/src/api/: __init__.py  ai.py  analytics.py  hands.py  import_.py  players.py  sessions.py
backend/src/importers/: __init__.py  base.py  registry.py
backend/src/models/: __init__.py  orm.py  schemas.py
backend/src/repositories/: __init__.py  hand_repository.py  player_repository.py  session_repository.py
backend/src/services/: __init__.py  ai_service.py  analytics_service.py  hand_service.py  import_service.py  player_service.py  session_service.py
docs/: 01-project-plan.md  02-mvp-definition.md  03-system-architecture.md  04-database-schema.md  05-frontend-design.md  06-backend-apis.md  07-development-roadmap.md  08-technical-risks.md  09-project-blueprint.md  agent-prompts.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
poker-engine/: pyproject.toml
poker-engine/src/poker_engine/: __init__.py  cards.py  equity.py  evaluation.py  game.py  ranges.py
poker-engine/src/poker_engine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
poker-engine/tests/: test_cards.py  test_evaluation.py
(+21 files in other folders)
