[project]
name = "poker-engine"
version = "0.1.0"
description = "Pure Python Texas Hold'em poker engine — hand evaluation, equity calculation, range combinatorics"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []  # Zero external dependencies — stdlib only

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
